[package]
name = "sea_battle"
version = "0.1.0"
authors = ["Matkin Alexandr <mae664128@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
rand = {version = "0.7.3", features = ["wasm-bindgen"] }
serde = "1.0.126"